# word-validator

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  vercel.build.sh  vercel.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pr-checks.yaml
word_validator/: config.py  dependencies.py  main.py
word_validator/api/: __init__.py  exception_handler.py  exceptions.py  schemas.py  search_api.py
word_validator/core/: __init__.py  file_helpers.py  trie.py  trie_node.py  word_parser.py
word_validator/data/storage/: words.xlsx
