[tool.poetry]
name = "word-validator"
version = "0.1.0"
description = ""
authors = ["kichichoi102 <kichichoi102@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.4"
openpyxl = "^3.1.4"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.3.1"
flake8 = "^3.7.9"
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
docker = "^6.1.3"
ruff = "^0.0.291"
mypy = "^1.4.1"
deptry = "^0.12.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
